# OpenGL-sandbox

./: .gitignore  CMakeLists.txt  nm.txt
.cache/clangd/index/: Main.cpp.831A1B09A570C7F4.idx  buffer_layout.hpp.55A904E0E2E7F436.idx  concepts.hpp.D181FE6B354EB7FD.idx  index_buffer.cpp.F28D551A2B143B92.idx  index_buffer.hpp.495DBB5A6E79E71E.idx  vertex_array.cpp.B6511F71BB3B8C25.idx  vertex_array.hpp.7DB58C4743D6B4A0.idx  vertex_buffer.cpp.BBF1EDD40C412E69.idx  vertex_buffer.hpp.549D2943274E6853.idx
include/: buffer_layout.hpp  concepts.hpp  index_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp
src/: Main.cpp  index_buffer.cpp  vertex_array.cpp  vertex_buffer.cpp
